# opus-static-sys

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
bindings/: Cargo.toml  build.rs
src/: lib.rs
