[package]
edition = "2024"
name = "opus-static-sys-bindings"
version = "1.5.2"
publish = false

[build-dependencies]
bindgen = { version = "0.71" }
doxygen-bindgen = { version = "0.1" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"
